--- a/VerGen.Tool/VerGen.Tool.csproj
+++ b/VerGen.Tool/VerGen.Tool.csproj
@@ -69,6 +69,7 @@
     <Compile Include="UI\Converters\InvertBoolConverter.cs" />
     <Compile Include="UI\Converters\IsNullConverter.cs" />
     <Compile Include="UI\Converters\NotNullConverter.cs" />
+    <Compile Include="UI\Converters\InvalidToStringConverter.cs" />
     <Compile Include="UI\Converters\ObjectToVisibilityConverter.cs" />
     <Compile Include="UI\Converters\SelectListItemConverter.cs" />
     <Compile Include="UI\Dialogs\ConfigDialog.xaml.cs">
@@ -76,6 +77,9 @@
     </Compile>
     <Compile Include="UI\Dialogs\PromptDialog.xaml.cs">
       <DependentUpon>PromptDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Dialogs\SelectDbFieldDialog.xaml.cs">
+      <DependentUpon>SelectDbFieldDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Dialogs\SelectFieldsDialog.xaml.cs">
       <DependentUpon>SelectFieldsDialog.xaml</DependentUpon>
@@ -153,6 +157,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="UI\Dialogs\PromptDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="UI\Dialogs\SelectDbFieldDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
